I got the build xml file working with our project. Please test it out for me. Currently if you are in the base directory, MULE/, if you type : ant jar, a directory structure named build will be created, the class files will be compiled, and the jar created. Go to the build directory and type : java -jar Mule.jar and tell me if it works.

--- a/MuleGame/.classpath
+++ b/MuleGame/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="src" path="assets"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David Wright/MULE/libgdxlibs/gdx-tools.jar"/>
+	<classpathentry kind="lib" path="libs/gdx-tools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
